Linked list finished

--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -382,50 +382,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 (e) -> 5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
+      "6 (e) <-> 5 (d) <-> 4 (c) <-> 3 (b) <-> 2 (a) <-> NULL\n",
       "\n",
       "Value 5 is found\n",
       "\n",
       "Value 7 is not found in the list.\n",
       "\n",
-      "6 (e) -> 5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
+      "6 (e) <-> 5 (d) <-> 4 (c) <-> 3 (b) <-> 2 (a) <-> NULL\n",
       "\n",
       "Node with value 6 is removed, and here is the updated list: \n",
       "\n",
-      "5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
+      "5 (d) <-> 4 (c) <-> 3 (b) <-> 2 (a) <-> NULL\n",
       "\n",
       "Node with value 3 is removed, and here is the updated list: \n",
       "\n",
-      "5 (d) -> 4 (c) -> 2 (a) -> NULL\n",
+      "5 (d) <-> 4 (c) <-> 2 (a) <-> NULL\n",
       "\n",
       "Node with value 9 is not found in the list. \n",
       "\n",
       "Node with letter a is removed, and here is the updated list: \n",
       "\n",
-      "5 (d) -> 4 (c) -> NULL\n",
+      "5 (d) <-> 4 (c) <-> NULL\n",
       "\n",
       "Value a is not found in the list.\n",
       "\n",
       "Value z is not found in the list.\n",
       "\n",
-      "5 (d) -> 4 (c) -> 69 (x) -> NULL\n",
+      "5 (d) <-> 4 (c) <-> NULL\n",
+      "\n",
+      "Value c is found\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Node:\n",
-    "  def __init__(self, value,letter, next_node=None):\n",
+    "\n",
+    "class DoublyNode:\n",
+    "\n",
+    "  # Setting up Node class with constructor, getter and setters \n",
+    "  def __init__(self, value,letter,prev_node = None, next_node=None):\n",
     "    self.value = value\n",
     "    self.letter = letter\n",
     "    self.next_node = next_node\n",
+    "    self.prev_node = prev_node\n",
     "    \n",
     "  def get_value(self):\n",
     "    return self.value\n",
@@ -436,51 +452,71 @@
     "  def set_next_node(self, next_node):\n",
     "    self.next_node = next_node\n",
     "\n",
+    "  def get_prev_node(self):\n",
+    "    return self.prev_node\n",
     "  \n",
-    "class LinkedList:\n",
-    "  def __init__(self, value = None, attribute = None):\n",
-    "    self.head_node = Node(value,attribute)\n",
+    "  def set_prev_node(self, prev_node):\n",
+    "    self.prev_node = prev_node\n",
+    "\n",
+    "  \n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "  #Setting up Linked list class\n",
+    "\n",
+    "  #Constructor with getters\n",
+    "\n",
+    "  def __init__(self, value = None, letter = None):\n",
+    "    self.head_node = None\n",
+    "    self.tail_node = None\n",
     "  \n",
     "  def get_head_node(self):\n",
     "    return self.head_node\n",
     "  \n",
+    "  def get_tail_node(self):\n",
+    "        return self.tail_node\n",
+    "  \n",
+    "  #This method will prepend a node to a list\n",
+    "\n",
     "  def insert_beginning(self, new_value, new_letter=None):\n",
-    "    new_node = Node(new_value, new_letter)\n",
-    "    new_node.set_next_node(self.head_node)\n",
+    "    new_node = DoublyNode(new_value, new_letter, next_node=self.head_node) # New node will take 2 param\n",
+    "    if not self.head_node:\n",
+    "        self.tail_node = new_node #Checking if it is empty and if it is empty assigning new node to tail\n",
+    "    else:\n",
+    "        self.head_node.set_prev_node(new_node) # Head node will be prev node add new node will be head node\n",
     "    self.head_node = new_node\n",
     "  \n",
-    "  def insert_end(self, new_value, new_letter=None ):\n",
-    "    new_node = Node(new_value, new_letter)\n",
-    "  \n",
     "  def insert_end(self, new_value, new_letter=None):\n",
-    "        new_node = Node(new_value, new_letter)\n",
-    "        if not self.head_node:\n",
-    "            self.head_node = new_node\n",
-    "            return\n",
+    "    new_node = DoublyNode(new_value, new_letter, prev_node=self.tail_node) # New node will take 2 param\n",
+    "    if not self.head_node:\n",
+    "        self.head_node = new_node #Checking if it is empty and if it is empty assigning new node to head\n",
+    "    else:\n",
+    "        self.tail_node.set_prev_node(new_node) # Tail node will be prev node add new node will be tail node\n",
+    "    self.tail_node = new_node\n",
     "\n",
-    "        current = self.head_node\n",
-    "        while current.next_node:\n",
-    "            current = current.next_node\n",
+    "  # In this method it creates a string list and addes linked list one by one\n",
     "\n",
-    "        current.next_node = new_node\n",
-    "\n",
-    " \n",
     "  def stringify_list(self):\n",
     "    string_list = \"\"\n",
     "    current_node = self.get_head_node()\n",
     "    \n",
     "    while current_node:\n",
-    "      if current_node.get_value() is not None:\n",
-    "        string_list += f\"{current_node.get_value()} ({current_node.letter}) -> \"\n",
-    "      current_node = current_node.get_next_node()\n",
+    "      if current_node.get_value() is not None:  #Checking if the list is empty\n",
+    "        string_list += f\"{current_node.get_value()} ({current_node.letter}) <-> \" #adding\n",
+    "      current_node = current_node.get_next_node()  \n",
     "    string_list += \"NULL\"\n",
-    "    return string_list\n",
+    "    return string_list  #When the list is empty it returns the string list\n",
     "  \n",
+    "  # displaying the string list to screen\n",
+    "\n",
     "  def display(self):\n",
     "    print(self.stringify_list() + \"\\n\")\n",
     "\n",
-    "  def search(self, searching_value, search_type= \"value\"):\n",
+    "  # Search method\n",
+    "\n",
+    "  def search(self, searching_value, search_type= \"value\"): #Takes two param which are value to search and which type(value/letter)\n",
     "    current = self.get_head_node()\n",
+    "\n",
+    "    #Iterates through list using head and changing the head to find the value\n",
     "    while current is not None:\n",
     "        if search_type == \"value\" and current.value == searching_value:\n",
     "            print(\"Value\", searching_value, \"is found\\n\")\n",
@@ -492,6 +528,8 @@
     "\n",
     "    print(\"Value\", searching_value, \"is not found in the list.\\n\")\n",
     "    return False\n",
+    "\n",
+    "  #Remove method \n",
     "\n",
     "  def remove_node(self, key_to_remove, search_type=\"value\"):\n",
     "   current_node = self.get_head_node()\n",
@@ -507,6 +545,8 @@
     "    print(f\"Node with {search_type} {key_to_remove} is removed, and here is the updated list: \\n\")\n",
     "    self.display()\n",
     "    return\n",
+    "   \n",
+    "   # If it doesn't match it sets new node and iterates through list to find if there is a matching value or letter\n",
     "\n",
     "   while current_node:\n",
     "    next_node = current_node.get_next_node()\n",
@@ -522,7 +562,7 @@
     "   print(f\"Node with {search_type} {key_to_remove} is not found in the list. \\n\")\n",
     "\n",
     "#Ex2 Creating linked list with 5 objects\n",
-    "ll = LinkedList()\n",
+    "ll = DoublyLinkedList()\n",
     "ll.insert_beginning(2,\"a\")\n",
     "ll.insert_beginning(3,\"b\")\n",
     "ll.insert_beginning(4,\"c\")\n",
@@ -551,7 +591,8 @@
     "ll.insert_end(69,\"x\")\n",
     "ll.display()\n",
     "\n",
-    "\n"
+    "#Ex9 Turned the whole singly linked list to Doubly linked list\n",
+    "ll.search(\"c\", search_type=\"letter\")\n"
    ]
   },
   {
