--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -827,10 +827,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre sort : [6, 0, 1, 0, 2, 0, 7, 4, 4, 8]\n",
+      "Post sort : [0, 0, 0, 1, 2, 4, 4, 6, 7, 8] with :36 iteration\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "array = []\n",
+    "iteration = 0\n",
+    "array.extend(random.randrange(0,9)for x in range (10))\n",
+    "print(\"Pre sort :\",array)\n",
+    "\n",
+    "def bubble_sort(arr):\n",
+    "    indexing_len = len(arr) -1\n",
+    "    sorted = False\n",
+    "    iteration = 0\n",
+    "    \n",
+    "\n",
+    "    while not sorted:\n",
+    "        sorted = True \n",
+    "        for i in range(0, indexing_len):\n",
+    "            iteration += 1\n",
+    "            if arr[i] > arr[i+1]:\n",
+    "                sorted = False \n",
+    "                arr[i], arr[i+1] = arr[i+1], arr[i]\n",
+    "    \n",
+    "    print(\"Post sort :\",array,\"with :{0} iteration\".format(iteration))\n",
+    "    \n",
+    "bubble_sort(array)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
