--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -827,19 +827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "element 1 is located at index value not found\n",
+      "element 4 is located at index 6\n",
       "50000\n",
-      "Post sort : [1, 1, 2, 3, 3, 4, 4, 4, 5, 7] with :72 iteration\n",
+      "Post sort : [2, 4, 4, 4, 4, 5, 5, 6, 6, 7] with :45 iteration\n",
       "Time taken for bubble sort for 10 items : 0.0 seconds\n",
-      "Time taken for merge for 50000 items : 0.24491167068481445 seconds\n"
+      "Time taken for merge for 50000 items : 0.24763035774230957 seconds\n",
+      "element 999 is located at index 49999\n",
+      "Time taken for binary search : 0.0 seconds\n",
+      "Time taken for linear search : 0.0009980201721191406 seconds\n"
      ]
     }
    ],
@@ -881,11 +883,11 @@
     "      return idx\n",
     "  raise ValueError(\"{0} not in list\".format(ran_num))\n",
     "\n",
-    "try:\n",
-    "  result = linear_search(array, random_number)\n",
+    "#try:\n",
+    "  result = linear_search(arr, ran_num)\n",
     "  print(result)\n",
     "  linear_search(array, random_number)\n",
-    "except ValueError as error_message:\n",
+    "#except ValueError as error_message:\n",
     "  print(\"{0}\".format(error_message))\n",
     "\n",
     "\n",
@@ -912,7 +914,7 @@
     "\n",
     "start_of_values = 0\n",
     "end_of_values = len(array)\n",
-    "result = binary_search(array, start_of_values, end_of_values, random_number)\n",
+    "result = binary_search(array, array[0], len(array), random_number)\n",
     "\n",
     "print(\"element {0} is located at index {1}\".format(random_number, result))\n",
     "\n",
@@ -1004,8 +1006,25 @@
     "# Time taken for merge for 50000 items : 0.24491167068481445 seconds\n",
     "print(\"Time taken for merge for 50000 items :\",(end_time4 - start_time4),\"seconds\")\n",
     "\n",
+    "#Ex 9 \n",
     "\n",
-    "\n"
+    "array1[49999] = 999\n",
+    "\n",
+    "# Time taken for binary search : 0.0 seconds\n",
+    "\n",
+    "start_time5 = time.time()\n",
+    "result1 = binary_search(array1, array1[0], len(array1), 999)\n",
+    "end_time5 = time.time()\n",
+    "\n",
+    "print(\"element {0} is located at index {1}\".format(999, result1))\n",
+    "print(\"Time taken for binary search :\",(end_time5 - start_time5),\"seconds\")\n",
+    "\n",
+    "#Time taken for linear search : 0.0009980201721191406 seconds\n",
+    "start_time6 = time.time()\n",
+    "linear_search(array1, 999)\n",
+    "end_time6 = time.time()\n",
+    "\n",
+    "print(\"Time taken for linear search :\",(end_time6 - start_time6),\"seconds\")\n"
    ]
   },
   {
