Stack, Queue updates

--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1047,10 +1047,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding 0 to the stack!\n",
+      "Adding 2 to the stack!\n",
+      "Adding 3 to the stack!\n",
+      "Adding 4 to the stack!\n",
+      "Adding 5 to the stack!\n",
+      "Removing 5 from the stack\n",
+      "Removing 4 from the stack\n",
+      "Adding 1st to the queue!\n",
+      "Adding 2nd to the queue!\n",
+      "Adding 3rd to the queue!\n",
+      "Adding 4th to the queue!\n",
+      "1st is removed from the queue!\n",
+      "2nd is removed from the queue!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2nd'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "  def __init__(self, value, next_node=None):\n",
+    "    self.value = value\n",
+    "    self.next_node = next_node\n",
+    "    \n",
+    "  def get_value(self):\n",
+    "    return self.value\n",
+    "  \n",
+    "  def get_next_node(self):\n",
+    "    return self.next_node\n",
+    "  \n",
+    "  def set_next_node(self, next_node):\n",
+    "    self.next_node = next_node\n",
+    "\n",
+    "class Stack:\n",
+    "  def __init__(self, limit=1000):\n",
+    "    self.top_item = None\n",
+    "    self.size = 0\n",
+    "    self.limit = limit\n",
+    "  \n",
+    "  def push(self, value):\n",
+    "    if self.has_space():\n",
+    "      item = Node(value)\n",
+    "      item.set_next_node(self.top_item)\n",
+    "      self.top_item = item\n",
+    "      self.size += 1\n",
+    "      print(\"Adding {} to the stack!\".format(value))\n",
+    "    else:\n",
+    "      print(\"No room for {}!\".format(value))\n",
+    "\n",
+    "  def pop(self):\n",
+    "    if not self.is_empty():\n",
+    "      item_to_remove = self.top_item\n",
+    "      self.top_item = item_to_remove.get_next_node()\n",
+    "      self.size -= 1\n",
+    "      print(\"Removing {0} from the stack\".format(item_to_remove.get_value()))\n",
+    "      return item_to_remove.get_value()\n",
+    "    print(\"Empty.\")\n",
+    "\n",
+    "  def peek(self):\n",
+    "    if not self.is_empty():\n",
+    "      return self.top_item.get_value()\n",
+    "    print(\"Nothing to see here!\")\n",
+    "\n",
+    "  def has_space(self):\n",
+    "    return self.limit > self.size\n",
+    "\n",
+    "  def is_empty(self):\n",
+    "    return self.size == 0\n",
+    "\n",
+    "class Queue:\n",
+    "  def __init__(self, max_size=None):\n",
+    "    self.head = None\n",
+    "    self.tail = None\n",
+    "    self.max_size = max_size\n",
+    "    self.size = 0\n",
+    "    \n",
+    "  def enqueue(self, value):\n",
+    "    if self.has_space():\n",
+    "      item_to_add = Node(value)\n",
+    "      print(\"Adding \" + str(item_to_add.get_value()) + \" to the queue!\")\n",
+    "      if self.is_empty():\n",
+    "        self.head = item_to_add\n",
+    "        self.tail = item_to_add\n",
+    "      else:\n",
+    "        self.tail.set_next_node(item_to_add)\n",
+    "        self.tail = item_to_add\n",
+    "      self.size += 1\n",
+    "    else:\n",
+    "      print(\"Sorry, no more room!\")\n",
+    "         \n",
+    "  def dequeue(self):\n",
+    "    if self.get_size() > 0:\n",
+    "      item_to_remove = self.head\n",
+    "      print(str(item_to_remove.get_value()) + \" is removed from the queue!\")\n",
+    "      if self.get_size() == 1:\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "      else:\n",
+    "        self.head = self.head.get_next_node()\n",
+    "      self.size -= 1\n",
+    "      return item_to_remove.get_value()\n",
+    "    else:\n",
+    "      print(\"The queue is totally empty!\")\n",
+    "  \n",
+    "  def peek(self):\n",
+    "    if self.is_empty():\n",
+    "      print(\"Nothing to see here!\")\n",
+    "    else:\n",
+    "      return self.head.get_value()\n",
+    "  \n",
+    "  def get_size(self):\n",
+    "    return self.size\n",
+    "  \n",
+    "  def has_space(self):\n",
+    "    if self.max_size == None:\n",
+    "      return True\n",
+    "    else:\n",
+    "      return self.max_size > self.get_size()\n",
+    "    \n",
+    "  def is_empty(self):\n",
+    "    return self.size == 0\n",
+    "\n",
+    "#Ex1 \n",
+    "\n",
+    "#Creating stack and pushing values in  \n",
+    "nums = Stack()\n",
+    "nums.push(0)\n",
+    "nums.push(2)\n",
+    "nums.push(3)\n",
+    "nums.push(4)\n",
+    "nums.push(5)\n",
+    "\n",
+    "#Popping values out\n",
+    "nums.pop()\n",
+    "nums.pop()\n",
+    "\n",
+    "nums.peek()\n",
+    "\n",
+    "#Ex2\n",
+    "\n",
+    "queue = Queue()\n",
+    "\n",
+    "queue.enqueue(\"1st\")\n",
+    "queue.enqueue(\"2nd\")\n",
+    "queue.enqueue(\"3rd\")\n",
+    "queue.enqueue(\"4th\")\n",
+    "\n",
+    "queue.dequeue()\n",
+    "queue.dequeue()"
+   ]
   },
   {
    "cell_type": "markdown",
