--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -827,21 +827,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "element 4 is located at index 6\n",
+      "element 5 is located at index value not found\n",
       "50000\n",
-      "Post sort : [2, 4, 4, 4, 4, 5, 5, 6, 6, 7] with :45 iteration\n",
+      "Post sort : [0, 0, 1, 3, 3, 3, 4, 5, 5, 5] with :81 iteration\n",
       "Time taken for bubble sort for 10 items : 0.0 seconds\n",
-      "Time taken for merge for 50000 items : 0.24763035774230957 seconds\n",
+      "Time taken for merge for 50000 items : 0.44055628776550293 seconds\n",
       "element 999 is located at index 49999\n",
       "Time taken for binary search : 0.0 seconds\n",
-      "Time taken for linear search : 0.0009980201721191406 seconds\n"
+      "49999\n",
+      "Time taken for linear search : 0.008006572723388672 seconds\n"
      ]
     }
    ],
@@ -883,12 +884,7 @@
     "      return idx\n",
     "  raise ValueError(\"{0} not in list\".format(ran_num))\n",
     "\n",
-    "#try:\n",
-    "  result = linear_search(arr, ran_num)\n",
-    "  print(result)\n",
-    "  linear_search(array, random_number)\n",
-    "#except ValueError as error_message:\n",
-    "  print(\"{0}\".format(error_message))\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1021,7 +1017,13 @@
     "\n",
     "#Time taken for linear search : 0.0009980201721191406 seconds\n",
     "start_time6 = time.time()\n",
-    "linear_search(array1, 999)\n",
+    "try:\n",
+    "  result = linear_search(array1, 999)\n",
+    "  print(result)\n",
+    "  linear_search(array, random_number)\n",
+    "except ValueError as error_message:\n",
+    "  print(\"{0}\".format(error_message))\n",
+    "\n",
     "end_time6 = time.time()\n",
     "\n",
     "print(\"Time taken for linear search :\",(end_time6 - start_time6),\"seconds\")\n"
@@ -1047,13 +1049,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "First name: John\n",
+      "Second name: Wall\n",
+      "Phone number: 7300056490 \n",
+      "\n",
+      "None\n",
       "Adding 0 to the stack!\n",
       "Adding 2 to the stack!\n",
       "Adding 3 to the stack!\n",
@@ -1075,7 +1082,7 @@
        "'2nd'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,6 +1191,116 @@
     "  def is_empty(self):\n",
     "    return self.size == 0\n",
     "\n",
+    "class Hashmap:\n",
+    "  def __init__(self, array_size):\n",
+    "    self.array_size = array_size\n",
+    "    self.array = [None for item in range(array_size)]\n",
+    "\n",
+    "  def hash(self, key, count_collisions=0):\n",
+    "    key_bytes = key.encode()\n",
+    "    hash_code = sum(key_bytes)\n",
+    "    return hash_code + count_collisions\n",
+    "\n",
+    "  def compressor(self, hash_code):\n",
+    "    return hash_code % self.array_size\n",
+    "\n",
+    "  def assign(self, key, value):\n",
+    "    array_index = self.compressor(self.hash(key))\n",
+    "    current_array_value = self.array[array_index]\n",
+    "\n",
+    "    if current_array_value is None:\n",
+    "      self.array[array_index] = [key, value]\n",
+    "      return\n",
+    "\n",
+    "    if current_array_value[0] == key:\n",
+    "      self.array[array_index] = [key, value]\n",
+    "      return\n",
+    "\n",
+    "    # Collision!\n",
+    "\n",
+    "    number_collisions = 1\n",
+    "\n",
+    "    while(current_array_value[0] != key):\n",
+    "      new_hash_code = self.hash(key, number_collisions)\n",
+    "      new_array_index = self.compressor(new_hash_code)\n",
+    "      current_array_value = self.array[new_array_index]\n",
+    "\n",
+    "      if current_array_value is None:\n",
+    "        self.array[new_array_index] = [key, value]\n",
+    "        return\n",
+    "\n",
+    "      if current_array_value[0] == key:\n",
+    "        self.array[new_array_index] = [key, value]\n",
+    "        return\n",
+    "\n",
+    "      number_collisions += 1\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "  def retrieve(self, key):\n",
+    "    array_index = self.compressor(self.hash(key))\n",
+    "    possible_return_value = self.array[array_index]\n",
+    "\n",
+    "    if possible_return_value is None:\n",
+    "      return None\n",
+    "\n",
+    "    if possible_return_value[0] == key:\n",
+    "      return possible_return_value[1]\n",
+    "\n",
+    "    retrieval_collisions = 1\n",
+    "\n",
+    "    while (possible_return_value != key):\n",
+    "      new_hash_code = self.hash(key, retrieval_collisions)\n",
+    "      retrieving_array_index = self.compressor(new_hash_code)\n",
+    "      possible_return_value = self.array[retrieving_array_index]\n",
+    "\n",
+    "      if possible_return_value is None:\n",
+    "        return None\n",
+    "\n",
+    "      if possible_return_value[0] == key:\n",
+    "        return possible_return_value[1]\n",
+    "\n",
+    "      number_collisions += 1\n",
+    "\n",
+    "    return\n",
+    "  \n",
+    "\n",
+    "class Person:\n",
+    "  def __init__(self, f_name, l_name, p_number: int):\n",
+    "    self.f_name = f_name\n",
+    "    self.l_name = l_name\n",
+    "    self.p_number = p_number\n",
+    "\n",
+    "  def display(self):\n",
+    "    print(\"First name: {0}\\nSecond name: {1}\\nPhone number: {2} \\n\".format(self.f_name , self.l_name , self.p_number))\n",
+    "  \n",
+    "    \n",
+    "#Ex3\n",
+    "\n",
+    "person1 = Person(\"John\", \"Wall\",7300056490)\n",
+    "person2 = Person(\"Johne\", \"Walle\",7300056491)\n",
+    "person3 = Person(\"Johny\", \"Wally\",7300056492)\n",
+    "person4 = Person(\"Johna\", \"Walles\",730005693)\n",
+    "person5 = Person(\"Johnathan\", \"Walle\",7300056494)\n",
+    "person6 = Person(\"Johnson\", \"Wallfer\",7300056495)\n",
+    "\n",
+    "\n",
+    "\n",
+    "hashmap = Hashmap(5)\n",
+    "\n",
+    "hashmap.assign(\"student1\", person1)\n",
+    "hashmap.assign(\"student2\", person2)\n",
+    "hashmap.assign(\"student3\", person3)\n",
+    "hashmap.assign(\"student4\", person4)\n",
+    "hashmap.assign(\"student5\", person5)\n",
+    "#hashmap.assign(\"student6\", person6)\n",
+    "\n",
+    "print(hashmap.retrieve(\"student1\").display())\n",
+    "#print(hashmap.retrieve(\"student2\").display())\n",
+    "#print(hashmap.retrieve(\"student3\").display())\n",
+    "#print(hashmap.retrieve(\"student4\").display())\n",
+    "#print(hashmap.retrieve(\"student5\").display())\n",
+    "\n",
     "#Ex1 \n",
     "\n",
     "#Creating stack and pushing values in  \n",
@@ -1210,7 +1327,8 @@
     "queue.enqueue(\"4th\")\n",
     "\n",
     "queue.dequeue()\n",
-    "queue.dequeue()"
+    "queue.dequeue()\n",
+    "\n"
    ]
   },
   {
