--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1263,7 +1263,9 @@
     "      number_collisions += 1\n",
     "\n",
     "    return\n",
-    "  \n",
+    "\n",
+    "class Linkedstack :\n",
+    "   \n",
     "\n",
     "class Person:\n",
     "  def __init__(self, f_name, l_name, p_number: int):\n",
