--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1049,18 +1049,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First name: John\n",
-      "Second name: Wall\n",
-      "Phone number: 7300056490 \n",
       "\n",
-      "None\n",
+      " Exercise 1\n",
       "Adding 0 to the stack!\n",
       "Adding 2 to the stack!\n",
       "Adding 3 to the stack!\n",
@@ -1068,21 +1065,43 @@
       "Adding 5 to the stack!\n",
       "Removing 5 from the stack\n",
       "Removing 4 from the stack\n",
+      "\n",
+      " Exercise 2\n",
       "Adding 1st to the queue!\n",
       "Adding 2nd to the queue!\n",
       "Adding 3rd to the queue!\n",
       "Adding 4th to the queue!\n",
       "1st is removed from the queue!\n",
-      "2nd is removed from the queue!\n"
+      "2nd is removed from the queue!\n",
+      "\n",
+      " Exercise 3\n",
+      "First name: John\n",
+      "Second name: Wall\n",
+      "Phone number: 7300056490 \n",
+      "\n",
+      "None\n",
+      "\n",
+      " Exercise 4\n",
+      "Adding <__main__.LinkedList object at 0x000001AFC7BF0150> to the stack!\n",
+      "Adding <__main__.LinkedList object at 0x000001AFC8F74D10> to the stack!\n",
+      "2 -> 4 -> 6 -> None\n",
+      "1 -> 3 -> 5 -> None\n",
+      "Removing list from the stack\n",
+      "1 -> 3 -> 5 -> None\n",
+      "\n",
+      " Exercise 5\n",
+      "Adding value to the queue!\n",
+      "Adding value to the queue!\n",
+      "Value is removed from the queue!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'2nd'"
+       "<__main__.LinkedList at 0x1afc7bf0150>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,8 +1283,133 @@
     "\n",
     "    return\n",
     "\n",
-    "class Linkedstack :\n",
-    "   \n",
+    "class LinkedList:\n",
+    "  def __init__(self):\n",
+    "    self.head_node = None  \n",
+    "\n",
+    "  def get_head(self):\n",
+    "    return self.head_node\n",
+    "\n",
+    "  def is_empty(self):\n",
+    "    return self.head_node is None\n",
+    "  \n",
+    "  def append(self, data):\n",
+    "    new_node = Node(data)\n",
+    "    if self.is_empty():\n",
+    "      self.head_node = new_node \n",
+    "    else:\n",
+    "      current = self.head_node\n",
+    "      while current.next_node:\n",
+    "        current = current.next_node\n",
+    "      current.next_node = new_node\n",
+    "\n",
+    "  def display(self):\n",
+    "    current = self.head_node\n",
+    "    while current:\n",
+    "      print(current.value, end=\" -> \")\n",
+    "      current = current.next_node\n",
+    "    print(\"None\")\n",
+    "  \n",
+    "\n",
+    "class LinkedStack:\n",
+    "  def __init__(self, limit):\n",
+    "    self.top_item = None\n",
+    "    self.size = 0\n",
+    "    self.limit = limit\n",
+    "    self.stacks = LinkedList()  \n",
+    "\n",
+    "  def is_empty(self):\n",
+    "   return self.size == 0\n",
+    "\n",
+    "  def has_space(self):\n",
+    "    return self.limit > self.size\n",
+    "\n",
+    "  def push(self, value):\n",
+    "    if self.has_space():\n",
+    "      new_stack = LinkedList()\n",
+    "      new_stack.append(value)\n",
+    "\n",
+    "      if new_stack.head_node:\n",
+    "        new_stack.head_node.next_node = self.stacks.head_node\n",
+    "        self.stacks.head_node = new_stack.head_node\n",
+    "        self.size += 1\n",
+    "        print(\"Adding {} to the stack!\".format(value))\n",
+    "      else:\n",
+    "        print(\"Failed to add {} to the stack!\".format(value))\n",
+    "    else:\n",
+    "        print(\"No room for {}!\".format(value))\n",
+    "\n",
+    "\n",
+    "  def pop(self):\n",
+    "    if not self.is_empty():\n",
+    "      item_to_remove = self.stacks.head_node\n",
+    "      self.stacks.head_node = item_to_remove.next_node if item_to_remove else None\n",
+    "      self.size -= 1\n",
+    "      print(\"Removing list from the stack\")\n",
+    "      return item_to_remove.value\n",
+    "    print(\"Empty.\")\n",
+    "\n",
+    "  def display_all(self):\n",
+    "    current = self.stacks.head_node\n",
+    "    while current:\n",
+    "      current.value.display() \n",
+    "      current = current.next_node\n",
+    "\n",
+    "class LinkedQueue:\n",
+    "  def __init__(self, max_size=None):\n",
+    "    self.head = None\n",
+    "    self.tail = None\n",
+    "    self.max_size = max_size\n",
+    "    self.size = 0\n",
+    "\n",
+    "  def enqueue(self, value):\n",
+    "    if self.has_space():\n",
+    "      new_node = Node(value)\n",
+    "      print(\"Adding value to the queue!\")\n",
+    "      if self.is_empty():\n",
+    "        self.head = new_node\n",
+    "        self.tail = new_node\n",
+    "      else:\n",
+    "        self.tail.set_next_node(new_node)\n",
+    "        self.tail = new_node\n",
+    "      self.size += 1\n",
+    "    else:\n",
+    "        print(\"Sorry, no more room!\")\n",
+    "\n",
+    "  def dequeue(self):\n",
+    "    if self.get_size() > 0:\n",
+    "      item_to_remove = self.head\n",
+    "      print(\"Value is removed from the queue!\")\n",
+    "      if self.get_size() == 1:\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "      else:\n",
+    "        self.head = self.head.get_next_node()\n",
+    "        self.size -= 1\n",
+    "      return item_to_remove.value\n",
+    "    else:\n",
+    "      print(\"The queue is totally empty!\")\n",
+    "\n",
+    "  def peek(self):\n",
+    "    if self.is_empty():\n",
+    "      print(\"Nothing to see here!\")\n",
+    "    else:\n",
+    "      return self.head.value\n",
+    "\n",
+    "  def get_size(self):\n",
+    "    return self.size\n",
+    "\n",
+    "  def has_space(self):\n",
+    "    if self.max_size is None:\n",
+    "      return True\n",
+    "    else:\n",
+    "      return self.max_size > self.get_size()\n",
+    "\n",
+    "  def is_empty(self):\n",
+    "    return self.size == 0\n",
+    "  \n",
+    "\n",
+    "  \n",
     "\n",
     "class Person:\n",
     "  def __init__(self, f_name, l_name, p_number: int):\n",
@@ -1277,8 +1421,36 @@
     "    print(\"First name: {0}\\nSecond name: {1}\\nPhone number: {2} \\n\".format(self.f_name , self.l_name , self.p_number))\n",
     "  \n",
     "    \n",
-    "#Ex3\n",
+    "#Ex1 \n",
+    "print(\"\\n Exercise 1\")\n",
+    "#Creating stack and pushing values in  \n",
+    "nums = Stack()\n",
+    "nums.push(0)\n",
+    "nums.push(2)\n",
+    "nums.push(3)\n",
+    "nums.push(4)\n",
+    "nums.push(5)\n",
     "\n",
+    "#Popping values out\n",
+    "nums.pop()\n",
+    "nums.pop()\n",
+    "\n",
+    "nums.peek()\n",
+    "\n",
+    "#Ex2\n",
+    "print(\"\\n Exercise 2\")\n",
+    "queue = Queue()\n",
+    "\n",
+    "queue.enqueue(\"1st\")\n",
+    "queue.enqueue(\"2nd\")\n",
+    "queue.enqueue(\"3rd\")\n",
+    "queue.enqueue(\"4th\")\n",
+    "\n",
+    "queue.dequeue()\n",
+    "queue.dequeue()\n",
+    "\n",
+    "#Ex3\n",
+    "print(\"\\n Exercise 3\")\n",
     "person1 = Person(\"John\", \"Wall\",7300056490)\n",
     "person2 = Person(\"Johne\", \"Walle\",7300056491)\n",
     "person3 = Person(\"Johny\", \"Wally\",7300056492)\n",
@@ -1303,33 +1475,32 @@
     "#print(hashmap.retrieve(\"student4\").display())\n",
     "#print(hashmap.retrieve(\"student5\").display())\n",
     "\n",
-    "#Ex1 \n",
+    "#Ex 4 \n",
+    "print(\"\\n Exercise 4\")\n",
+    "l1 = LinkedList()\n",
+    "l1.append(1)\n",
+    "l1.append(3)\n",
+    "l1.append(5)\n",
+    "l2 = LinkedList()\n",
+    "l2.append(2)\n",
+    "l2.append(4)\n",
+    "l2.append(6)\n",
     "\n",
-    "#Creating stack and pushing values in  \n",
-    "nums = Stack()\n",
-    "nums.push(0)\n",
-    "nums.push(2)\n",
-    "nums.push(3)\n",
-    "nums.push(4)\n",
-    "nums.push(5)\n",
+    "stack = LinkedStack(5)\n",
+    "stack.push(l1)\n",
+    "stack.push(l2)\n",
     "\n",
-    "#Popping values out\n",
-    "nums.pop()\n",
-    "nums.pop()\n",
+    "stack.display_all()\n",
+    "stack.pop()\n",
+    "stack.display_all()\n",
     "\n",
-    "nums.peek()\n",
+    "#Ex5\n",
+    "print(\"\\n Exercise 5\")\n",
+    "queue_list = LinkedQueue(5)\n",
+    "queue_list.enqueue(l1)\n",
+    "queue_list.enqueue(l2)\n",
     "\n",
-    "#Ex2\n",
-    "\n",
-    "queue = Queue()\n",
-    "\n",
-    "queue.enqueue(\"1st\")\n",
-    "queue.enqueue(\"2nd\")\n",
-    "queue.enqueue(\"3rd\")\n",
-    "queue.enqueue(\"4th\")\n",
-    "\n",
-    "queue.dequeue()\n",
-    "queue.dequeue()\n",
+    "queue_list.dequeue()\n",
     "\n"
    ]
   },
