--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
     "      if possible_return_value[0] == key:\n",
     "        return possible_return_value[1]\n",
     "\n",
-    "      number_collisions += 1\n",
+    "      retrieval_collisions += 1\n",
     "\n",
     "    return\n",
     "\n",
@@ -1308,8 +1308,7 @@
     "    while current:\n",
     "      print(current.value, end=\" -> \")\n",
     "      current = current.next_node\n",
-    "    print(\"None\")\n",
-    "  \n",
+    "    print(\"None\") \n",
     "\n",
     "class LinkedStack:\n",
     "  def __init__(self, limit):\n",
@@ -1407,10 +1406,7 @@
     "\n",
     "  def is_empty(self):\n",
     "    return self.size == 0\n",
-    "  \n",
-    "\n",
-    "  \n",
-    "\n",
+    " \n",
     "class Person:\n",
     "  def __init__(self, f_name, l_name, p_number: int):\n",
     "    self.f_name = f_name\n",
