--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1528,10 +1528,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Binary Search Tree\n",
+      "Depth=4, Value=-7\n",
+      "Depth=5, Value=-2\n",
+      "Depth=3, Value=-1\n",
+      "Depth=2, Value=40\n",
+      "Depth=4, Value=40\n",
+      "Depth=3, Value=42\n",
+      "Depth=4, Value=45\n",
+      "Depth=1, Value=50\n",
+      "Depth=2, Value=60\n",
+      "Depth=4, Value=68\n",
+      "Depth=3, Value=69\n",
+      "Depth=4, Value=70\n",
+      "Depth=5, Value=75\n",
+      "Depth=6, Value=80\n",
+      "\n",
+      " Searches: 1. <__main__.BinarySearchTree object at 0x000002436039C510> 2. <__main__.BinarySearchTree object at 0x000002436039C150> 3. None \n",
+      "Generated Dataset: ['B', 'F', 'Y', 'G', 'I', 'V', 'R', 'T', 'Q', 'X', 'Z', 'M', 'E']\n",
+      "Depth=4, Value=B\n",
+      "Depth=3, Value=E\n",
+      "Depth=6, Value=F\n",
+      "Depth=7, Value=G\n",
+      "Depth=5, Value=I\n",
+      "Depth=7, Value=M\n",
+      "Depth=6, Value=Q\n",
+      "Depth=4, Value=R\n",
+      "Depth=2, Value=T\n",
+      "Depth=1, Value=V\n",
+      "Depth=3, Value=X\n",
+      "Depth=2, Value=Y\n",
+      "Depth=3, Value=Z\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'C' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Entwan\\Documents\\GitHub\\LogBook\\Logbook1.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Entwan/Documents/GitHub/LogBook/Logbook1.ipynb#X24sZmlsZQ%3D%3D?line=122'>123</a>\u001b[0m tree1\u001b[39m.\u001b[39minorder_traversal()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Entwan/Documents/GitHub/LogBook/Logbook1.ipynb#X24sZmlsZQ%3D%3D?line=124'>125</a>\u001b[0m \u001b[39m#Ex8\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Entwan/Documents/GitHub/LogBook/Logbook1.ipynb#X24sZmlsZQ%3D%3D?line=125'>126</a>\u001b[0m tree1\u001b[39m.\u001b[39mremove_node(C)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'C' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "class BinarySearchTree:\n",
+    "    def __init__(self,value, depth=1):\n",
+    "        self.value = value\n",
+    "        self.right = None\n",
+    "        self.left = None\n",
+    "        self.depth = depth\n",
+    "    \n",
+    "    def insert(self, value):\n",
+    "        if (value < self.value):\n",
+    "          if (self.left is None):\n",
+    "            self.left = BinarySearchTree(value, self.depth + 1)\n",
+    "          else:\n",
+    "            self.left.insert(value)\n",
+    "        else:\n",
+    "          if (self.right is None):\n",
+    "           self.right = BinarySearchTree(value, self.depth + 1)\n",
+    "          else:\n",
+    "           self.right.insert(value)\n",
+    "    \n",
+    "    def get_node_by_value(self, value):\n",
+    "      if (self.value == value):\n",
+    "        return self\n",
+    "      elif ((self.left is not None) and (value < self.value)):\n",
+    "        return self.left.get_node_by_value(value)\n",
+    "      elif ((self.right is not None) and (value >= self.value)):\n",
+    "        return self.right.get_node_by_value(value)\n",
+    "      else:\n",
+    "        return None\n",
+    "\n",
+    "    #Depth first\n",
+    "    #Traverse as far left as possible\n",
+    "    #Smallest numbers are printed first here:\n",
+    "    def inorder_traversal(self):\n",
+    "      if (self.left is not None):\n",
+    "        self.left.inorder_traversal()\n",
+    "      print(f'Depth={self.depth}, Value={self.value}')\n",
+    "      if (self.right is not None):\n",
+    "        self.right.inorder_traversal()\n",
+    "    \n",
+    "    #Printing as soon as we find a node until the smallest one\n",
+    "    def preorder_traversal(self):\n",
+    "      print(f'Depth={self.depth}, Value={self.value}')\n",
+    "      if (self.left is not None):\n",
+    "        self.left.preorder_traversal()\n",
+    "      if (self.right is not None):\n",
+    "        self.right.preorder_traversal()\n",
+    "\n",
+    "    #As deep as possible then only then print\n",
+    "\n",
+    "    def postorder_traversal(self):\n",
+    "      if (self.left is not None):\n",
+    "        self.left.postorder_traversal()\n",
+    "      if (self.right is not None):\n",
+    "        self.right.postorder_traversal() \n",
+    "      print(f'Depth={self.depth}, Value={self.value}')\n",
+    "        \n",
+    "    def remove_node(self, value):\n",
+    "      def find_successor(node):\n",
+    "        current = node.right\n",
+    "        while current.left is not None:\n",
+    "            current = current.left\n",
+    "        return current\n",
+    "\n",
+    "      if self is None:\n",
+    "        return None\n",
+    "\n",
+    "      if value < self.value:\n",
+    "        self.left = self.left.remove_node(value)\n",
+    "      elif value > self.value:\n",
+    "        self.right = self.right.remove_node(value)\n",
+    "      else:\n",
+    "        if self.left is None:\n",
+    "            return self.right\n",
+    "        elif self.right is None:\n",
+    "            return self.left\n",
+    "\n",
+    "        successor = find_successor(self)\n",
+    "        self.value = successor.value\n",
+    "        self.right = self.right.remove_node(successor.value)\n",
+    "\n",
+    "      return self\n",
+    "print(\"Creating Binary Search Tree\")\n",
+    "tree = BinarySearchTree(50)\n",
+    "\n",
+    "#Ex2\n",
+    "tree.insert(40)\n",
+    "tree.insert(60)\n",
+    "tree.insert(-1)\n",
+    "tree.insert(42)\n",
+    "tree.insert(69)\n",
+    "tree.insert(70)\n",
+    "tree.insert(-7)\n",
+    "tree.insert(-2)\n",
+    "tree.insert(40)\n",
+    "tree.insert(45)\n",
+    "tree.insert(68)\n",
+    "tree.insert(75)\n",
+    "tree.insert(80)\n",
+    "\n",
+    "#Ex3\n",
+    "tree.inorder_traversal()\n",
+    "\n",
+    "#Ex4\n",
+    "res1 = tree.get_node_by_value(70)\n",
+    "res2 = tree.get_node_by_value(-2)\n",
+    "res3 = tree.get_node_by_value(0)  \n",
+    "print(\"\\n Searches: 1. {0} 2. {1} 3. {2} \".format(res1,res2,res3))\n",
+    "\n",
+    "#Ex5\n",
+    "letters = random.sample('ABCDEFGHIJKLMNOPQRSTUVWXYZ', 13)\n",
+    "\n",
+    "print(\"Generated Dataset:\", letters)\n",
+    "\n",
+    "#EX6\n",
+    "random.shuffle(letters)\n",
+    "\n",
+    "tree1 = BinarySearchTree(letters[0])\n",
+    "for letter in letters[1:]:\n",
+    "    tree1.insert(letter)\n",
+    "\n",
+    "#Ex7\n",
+    "tree1.inorder_traversal()\n",
+    "\n",
+    "#Ex8\n",
+    "tree.remove_node()\n"
+   ]
   },
   {
    "cell_type": "markdown",
