--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1550,20 +1550,20 @@
       "80\n",
       "\n",
       " Searches: 1. True 2. True 3. False \n",
-      "Generated Dataset: ['L', 'M', 'H', 'G', 'C', 'E', 'W', 'N', 'T', 'D', 'K', 'X', 'F']\n",
-      "C\n",
-      "D\n",
-      "E\n",
+      "Generated Dataset: ['M', 'R', 'I', 'O', 'U', 'F', 'V', 'G', 'L', 'Q', 'A', 'H', 'N']\n",
+      "A\n",
       "F\n",
       "G\n",
       "H\n",
-      "K\n",
+      "I\n",
       "L\n",
       "M\n",
       "N\n",
-      "T\n",
-      "W\n",
-      "X\n",
+      "O\n",
+      "Q\n",
+      "R\n",
+      "U\n",
+      "V\n",
       "Node to be deleted not found in the tree!\n",
       "After Removal:\n",
       "-7\n",
@@ -1576,7 +1576,8 @@
       "69\n",
       "70\n",
       "75\n",
-      "80\n"
+      "80\n",
+      "Challange is implemented in AVL tree below since it counts depths/heights.\n"
      ]
     }
    ],
@@ -1592,6 +1593,57 @@
     "class binary_search_tree:\n",
     "\tdef __init__(self):\n",
     "\t\tself.root=None\n",
+    "\n",
+    "\t# Generates a string representation of the AVL Tree, displaying the structure of the tree with each node's value and height.\n",
+    "\tdef __repr__(self):\n",
+    "\t\tif self.root==None: return ''\n",
+    "\t\tcontent='\\n' # to hold final string\n",
+    "\t\tcur_nodes=[self.root] # all nodes at current level\n",
+    "\t\tcur_height=self.root.height # height of nodes at current level\n",
+    "\t\tsep=' '*(2**(cur_height-1)) # variable sized separator between elements\n",
+    "\t\twhile True:\n",
+    "\t\t\tcur_height+=-1 # decrement current height\n",
+    "\t\t\tif len(cur_nodes)==0: break\n",
+    "\t\t\tcur_row=' '\n",
+    "\t\t\tnext_row=''\n",
+    "\t\t\tnext_nodes=[]\n",
+    "\n",
+    "\t\t\tif all(n is None for n in cur_nodes):\n",
+    "\t\t\t\tbreak\n",
+    "\n",
+    "\t\t\tfor n in cur_nodes:\n",
+    "\n",
+    "\t\t\t\tif n==None:\n",
+    "\t\t\t\t\tcur_row+='   '+sep\n",
+    "\t\t\t\t\tnext_row+='   '+sep\n",
+    "\t\t\t\t\tnext_nodes.extend([None,None])\n",
+    "\t\t\t\t\tcontinue\n",
+    "\n",
+    "\t\t\t\tif n.value!=None:       \n",
+    "\t\t\t\t\tbuf=' '*int((5-len(str(n.value)))/2)\n",
+    "\t\t\t\t\tcur_row+='%s%s%s'%(buf,str(n.value),buf)+sep\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tcur_row+=' '*5+sep\n",
+    "\n",
+    "\t\t\t\tif n.left_child!=None:  \n",
+    "\t\t\t\t\tnext_nodes.append(n.left_child)\n",
+    "\t\t\t\t\tnext_row+=' /'+sep\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tnext_row+='  '+sep\n",
+    "\t\t\t\t\tnext_nodes.append(None)\n",
+    "\n",
+    "\t\t\t\tif n.right_child!=None: \n",
+    "\t\t\t\t\tnext_nodes.append(n.right_child)\n",
+    "\t\t\t\t\tnext_row+='\\ '+sep\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tnext_row+='  '+sep\n",
+    "\t\t\t\t\tnext_nodes.append(None)\n",
+    "\n",
+    "\t\t\tcontent+=(cur_height*'   '+cur_row+'\\n'+cur_height*'   '+next_row+'\\n')\n",
+    "\t\t\tcur_nodes=next_nodes\n",
+    "\t\t\tsep=' '*int(len(sep)/2) # cut separator size in half\n",
+    "\t\treturn content\n",
+    "\n",
     "\n",
     "\t'''\n",
     "\tInserting method with a public method which includes underscore private method\n",
@@ -1820,17 +1872,90 @@
     "print(\"After Removal:\")\n",
     "tree.print_tree()\n",
     "\n",
+    "#EX9\n",
+    "print(\"Challange is implemented in AVL tree below since it counts depths/heights.\")\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Binary Search Tree\n",
+      "In order Traversal: \n",
+      "-7, h=1\n",
+      "-2, h=2\n",
+      "-1, h=1\n",
+      "40, h=3\n",
+      "42, h=2\n",
+      "45, h=1\n",
+      "60, h=4\n",
+      "68, h=1\n",
+      "69, h=3\n",
+      "70, h=1\n",
+      "75, h=2\n",
+      "80, h=1\n",
+      "\n",
+      " Searches: 1. True 2. True 3. False \n",
+      "Generated Dataset: ['R', 'O', 'J', 'W', 'P', 'N', 'U', 'K', 'X', 'D', 'L', 'C', 'G']\n",
+      "In order Traversal: \n",
+      "C, h=1\n",
+      "D, h=2\n",
+      "G, h=3\n",
+      "J, h=1\n",
+      "K, h=2\n",
+      "L, h=1\n",
+      "N, h=4\n",
+      "O, h=1\n",
+      "P, h=2\n",
+      "R, h=3\n",
+      "U, h=1\n",
+      "W, h=2\n",
+      "X, h=1\n",
+      "Node to be deleted not found in the tree!\n",
+      "In order Traversal after removal: \n",
+      "-7, h=1\n",
+      "-1, h=2\n",
+      "40, h=3\n",
+      "45, h=1\n",
+      "60, h=4\n",
+      "68, h=1\n",
+      "69, h=3\n",
+      "70, h=1\n",
+      "75, h=2\n",
+      "80, h=1\n",
+      "Challange: \n",
+      "\n",
+      "           60         \n",
+      "          /        \\         \n",
+      "        40      69     \n",
+      "       /    \\      /    \\     \n",
+      "     -1    45    68    75   \n",
+      "    /                       /  \\   \n",
+      "  -7                       70   80  \n",
+      "                                      \n",
+      "\n",
+      "\n",
+      "            N          \n",
+      "          /        \\         \n",
+      "         G        R      \n",
+      "       /    \\      /    \\     \n",
+      "      D      K      P      W    \n",
+      "    /       /  \\    /       /  \\   \n",
+      "   C         J     L     O         U     X   \n",
+      "                                            \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# AVL treeeeeee\n",
-    "\n",
+    "import random\n",
     "class node:\n",
     "\tdef __init__(self,value=None):\n",
     "\t\tself.value=value\n",
@@ -1843,6 +1968,7 @@
     "\tdef __init__(self):\n",
     "\t\tself.root=None\n",
     "\n",
+    "# Generates a string representation of the AVL Tree, displaying the structure of the tree with each node's value and height.\n",
     "\tdef __repr__(self):\n",
     "\t\tif self.root==None: return ''\n",
     "\t\tcontent='\\n' # to hold final string\n",
@@ -1903,7 +2029,7 @@
     "\t\t\tif cur_node.left_child==None:\n",
     "\t\t\t\tcur_node.left_child=node(value)\n",
     "\t\t\t\tcur_node.left_child.parent=cur_node # set parent\n",
-    "\t\t\t\tself._inspect_insertion(cur_node.left_child)\n",
+    "\t\t\t\tself._inspect_insertion(cur_node.left_child) # \n",
     "\t\t\telse:\n",
     "\t\t\t\tself._insert(value,cur_node.left_child)\n",
     "\t\telif value>cur_node.value:\n",
@@ -1957,15 +2083,10 @@
     "\n",
     "\tdef delete_node(self,node):\n",
     "\n",
-    "\t\t## -----\n",
-    "\t\t# Improvements since prior lesson\n",
-    "\n",
-    "\t\t# Protect against deleting a node not found in the tree\n",
     "\t\tif node==None or self.find(node.value)==None:\n",
     "\t\t\tprint(\"Node to be deleted not found in the tree!\")\n",
     "\t\t\treturn None \n",
-    "\t\t## -----\n",
-    "\n",
+    "\t\t\n",
     "\t\t# returns the node with min value in tree rooted at input node\n",
     "\t\tdef min_value_node(n):\n",
     "\t\t\tcurrent=n\n",
@@ -2063,8 +2184,16 @@
     "\t\treturn False \n",
     "\n",
     "\n",
-    "\t# Functions added for AVL...\n",
+    "\t# Functions added for AVL\n",
+    "\t'''\n",
+    "\tThis method essentially checks the balance factor of each ancestor of the newly inserted node and performs rotations if an imbalance is detected. \n",
+    "\tThe balancing process ensures that the AVL tree property is maintained, and the heights of nodes are adjusted accordingly.\n",
     "\n",
+    "\tPython abs() returns the absolute value of any given number. \n",
+    "\tIt is possible for the number to be an integer, a floating-point number, or a complex number. \n",
+    "\tWe can get the python absolute value of any number by utilizing one of the built-in functions, Python abs ().\n",
+    "\t'''\n",
+    "   \n",
     "\tdef _inspect_insertion(self,cur_node,path=[]):\n",
     "\t\tif cur_node.parent==None: return\n",
     "\t\tpath=[cur_node]+path\n",
@@ -2082,7 +2211,12 @@
     "\t\t\tcur_node.parent.height=new_height\n",
     "\n",
     "\t\tself._inspect_insertion(cur_node.parent,path)\n",
+    "\t''' \n",
+    "\tThis method ensures that after a deletion, the AVL tree is still balanced by checking \n",
+    "\tthe balance factor of each ancestor of the deleted node and performing rotations if necessary. \n",
+    "\tIt helps in maintaining the AVL tree property.\n",
     "\n",
+    "\t'''\n",
     "\tdef _inspect_deletion(self,cur_node):\n",
     "\t\tif cur_node==None: return\n",
     "\n",
@@ -2095,6 +2229,22 @@
     "\t\t\tself._rebalance_node(cur_node,y,x)\n",
     "\n",
     "\t\tself._inspect_deletion(cur_node.parent)\n",
+    "\n",
+    "\t''' \n",
+    "\t\tT1, T2 and T3 are subtrees of the tree, rooted with y (on the left side) or x (on the right side)     \n",
+    "      \n",
+    "    \t z                               y \n",
+    "    \t/ \\     Right Rotation          /  \\\n",
+    "   \t   y   T3   - - - - - - - >        x    z \n",
+    "  \t  / \\       < - - - - - - -            / \\\n",
+    " \t x  T2     Left Rotation              T2  T3\n",
+    " \n",
+    "\t\tz: The original node where the imbalance is detected.\n",
+    "\t\ty: The child of z with the greater height.\n",
+    "\t\tx: The child of y with the greater height.\n",
+    "\t\tt2: The left child of y.\n",
+    "\t\tt3: The right child of z.\n",
+    "\t'''\n",
     "\n",
     "\tdef _rebalance_node(self,z,y,x):\n",
     "\t\tif y==z.left_child and x==y.left_child:\n",
@@ -2152,6 +2302,10 @@
     "\t\ty.height=1+max(self.get_height(y.left_child),\n",
     "\t\t\tself.get_height(y.right_child))\n",
     "\n",
+    "\t''' \n",
+    "\tTo determine which child is causing an imbalance and needs to be addressed through rotations. \n",
+    "\tThe get_height method is to retrieve the height of a node, and taller_child is used to identify the taller child of a given node.\n",
+    "\t'''\n",
     "\tdef get_height(self,cur_node):\n",
     "\t\tif cur_node==None: return 0\n",
     "\t\treturn cur_node.height\n",
@@ -2159,7 +2313,62 @@
     "\tdef taller_child(self,cur_node):\n",
     "\t\tleft=self.get_height(cur_node.left_child)\n",
     "\t\tright=self.get_height(cur_node.right_child)\n",
-    "\t\treturn cur_node.left_child if left>=right else cur_node.right_child"
+    "\t\treturn cur_node.left_child if left>=right else cur_node.right_child\n",
+    "\n",
+    "print(\"Creating Binary Search Tree\")\n",
+    "tree = AVLTree()\n",
+    "\n",
+    "#Ex2\n",
+    "tree.insert(40)\n",
+    "tree.insert(60)\n",
+    "tree.insert(-1)\n",
+    "tree.insert(42)\n",
+    "tree.insert(69)\n",
+    "tree.insert(70)\n",
+    "tree.insert(-7)\n",
+    "tree.insert(-2)\n",
+    "tree.insert(45)\n",
+    "tree.insert(68)\n",
+    "tree.insert(75)\n",
+    "tree.insert(80)\n",
+    "\n",
+    "#Ex3\n",
+    "print(\"In order Traversal: \")\n",
+    "tree.print_tree()\n",
+    "\n",
+    "#Ex4\n",
+    "res1 = tree.search(70)\n",
+    "res2 = tree.search(-2)\n",
+    "res3 = tree.search(0)  \n",
+    "print(\"\\n Searches: 1. {0} 2. {1} 3. {2} \".format(res1,res2,res3))\n",
+    "\n",
+    "#Ex5\n",
+    "letters = random.sample('ABCDEFGHIJKLMNOPQRSTUVWXYZ', 13)\n",
+    "\n",
+    "print(\"Generated Dataset:\", letters)\n",
+    "\n",
+    "#EX6\n",
+    "random.shuffle(letters)\n",
+    "\n",
+    "tree1 = AVLTree()\n",
+    "for letter in letters:\n",
+    "    tree1.insert(letter)\n",
+    "\n",
+    "#Ex7\n",
+    "print(\"In order Traversal: \")\n",
+    "tree1.print_tree()\n",
+    "\n",
+    "#Ex8\n",
+    "tree.delete_value(50)\n",
+    "tree.delete_value(42)\n",
+    "tree.delete_value(-2)\n",
+    "print(\"In order Traversal after removal: \")\n",
+    "tree.print_tree()\n",
+    "\n",
+    "#Ex9\n",
+    "print(\"Challange: \")\n",
+    "print(tree)\n",
+    "print(tree1)"
    ]
   },
   {
